# UCloud

./: .gitbook.yaml  .gitignore  AccountingOverview.tsx  DetailedUsage.tsx  Features.md  Jenkinsfile  README.md  TOC.md  Usage.tsx  aau.k8.kts  backend_arch.eps  backend_arch.txt  build.gradle  cloud_sdu_dk.k8.kts  create_new_service  create_service  docker-compose-dbs-only.yml  docker-compose.yml  escience_procedures.md  index.ts  launcher  launcher-dev  launcher-go  launcher-old  package-lock.json  pom.xml  settings.gradle  test.sh
abacus-analysis/: .gitignore  build.gradle
abc2-sync/: Jenkinsfile  README.md  build.gradle  settings.gradle
accounting-compute-service/: Dockerfile  JenkinsBuildDockerFile  Jenkinsfile  README.md  build.gradle  detekt.yml  k8.kts  service.yml  settings.gradle
accounting-service/: Dockerfile  JenkinsBuildDockerFile  Jenkinsfile  README.md  build.gradle  settings.gradle
accounting-storage-service/: Dockerfile  JenkinsBuildDockerFile  Jenkinsfile  (+4 more)
storage-service/native/: .gitignore  CMakeLists.txt  COMPILE_NATIVE.txt  Dockerfile  README.md  ceph-copy  ceph-remove  ceph-tree  chmod.cpp  chmod.h  cmakeclean.sh  copy.cpp  copy.h  delete.cpp  delete.h  dirlisting  docker-compose.yml  file_info.cpp  file_info.h  file_utils.cpp  file_utils.h  interpreter.cpp  libacl.cpp  libacl.h  list.cpp  list.h  main.cpp  mkdir.cpp  mkdir.h  move.cpp  move.h  remove.cpp  stat.cpp  stat.h  symlink.cpp  symlink.h  threading.cpp  timers.cpp  timers.h  tree  (+6 more)
storage-service/native/examples/: create-file  create-share-then-new-dir.txt  list-directory.txt
(+13813 files in other folders)
